# semantic-variable-registry

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
CodeableConcept/: index.html
Core/: index.html
Device/: index.html
Measurable/: index.html
MeasurementContext/: index.html
PhysicalEntity/: index.html
PhysicalEntityOrPhenomena/: index.html
PhysicalSubstance/: index.html
QuantityType/: index.html
StructuredMapping/: index.html
UnitLevelVariable/: index.html
UnitReference/: index.html
ValueDomain/: index.html
Variable/: index.html
VariableCategoryEnum/: index.html
VariableCollection/: index.html
VariableRelationship/: index.html
aggregate_function/: index.html
aliases/: index.html
allowed_contexts/: index.html
allowed_measured_in/: index.html
allowed_named_value_sets/: index.html
allowed_property_of/: index.html
allowed_units/: index.html
category/: index.html
code/: index.html
context/: index.html
denominator_variable/: index.html
description/: index.html
description_as_question/: index.html
devices/: index.html
embedded_value_set/: index.html
examples/: Variable-person-name.json  Variable-person-name.yaml  Variable-soil-depth-m.json  Variable-soil-depth-m.yaml  VariableCollection-health.json  VariableCollection-health.yaml  VariableCollection-physicochemical.json  VariableCollection-physicochemical.yaml  VariableCollection-pollution.json  VariableCollection-pollution.yaml  VariableCollection-sample.json  VariableCollection-sample.yaml  VariableCollection-soil.json  (+4 more)
(+300 files in other folders)
